this makes the server run on www

--- a/package.json
+++ b/package.json
@@ -49,5 +49,13 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng build && node ./bin/www",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
 }
